k8s/prod/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: asia-south1-docker.pkg.dev/i4you-457707/i4you-repo/auth-service-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort
  selector:
    app: auth-service
  ports:
    - port: 4001
      targetPort: 4001
      nodePort: 30080
