k8s/prod/gateway-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-server
  template:
    metadata:
      labels:
        app: gateway-server
    spec:
      containers:
        - name: gateway-server
          image: asia-south1-docker.pkg.dev/i4you-457707/i4you-repo/gateway-server-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
spec:
  type: ClusterIP
  selector:
    app: gateway-server
  ports:
    - port: 4000
      targetPort: 4000
