k8s/prod/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: asia-south1-docker.pkg.dev/i4you-457707/i4you-repo/user-service-image:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - port: 4002
      targetPort: 4002
      nodePort: 30090
