k8s/prod/validate-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validate-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: validate-service
  template:
    metadata:
      labels:
        app: validate-service
    spec:
      containers:
        - name: validate-service
          image: validate-service-image:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: validate-service
spec:
  type: ClusterIP
  selector:
    app: validate-service
  ports:
    - port: 80
      targetPort: 5000
