k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: i4you-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: i4you.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-server
                port:
                  number: 4000
  tls:
    - hosts:
        - i4you.ddns.net
      secretName: i4you-tls-secret  # cert-manager will create this
